# indoor-reconstruction

./: .gitattributes  .gitignore  README.md
c++/: README.md
c++/Tinkerforge_IMU2.0/: brick_imu_v2.cpp  brick_imu_v2.h
c++/binary_to_ascii_converter/: CMakeLists.txt  binary_to_ascii.cpp
c++/data_collection/: CMakeLists.txt  vlp.cpp
c++/interpolation_data_collection/: CMakeLists.txt  VelodyneCapture.h  interpolation_vlp.cpp
data/poster/fragments/fragment0/: imu_data.csv  quaternions_datapacket.csv  quaternions_fragment.csv  scan0.pcd  scan101.pcd  scan102.pcd  scan106.pcd  scan108.pcd  scan11.pcd  scan110.pcd  scan114.pcd  scan116.pcd  scan117.pcd  scan118.pcd  scan120.pcd  scan121.pcd  scan122.pcd  scan123.pcd  scan124.pcd  scan125.pcd  scan127.pcd  scan128.pcd  scan130.pcd  scan133.pcd  scan134.pcd  scan136.pcd  scan139.pcd  scan141.pcd  scan142.pcd  scan147.pcd  scan15.pcd  scan152.pcd  scan154.pcd  scan156.pcd  scan157.pcd  scan158.pcd  scan159.pcd  scan163.pcd  scan164.pcd  scan165.pcd  (+3940 more)
data/wallpaper/fragments/fragment0/: combined_cloud.pcd  fragment_floor.json  fragment_wall.json  multiway_registration.pcd  quaternions_interpolated.csv  scan0.pcd  scan1.pcd  scan10.pcd  scan100.pcd  scan101.pcd  scan102.pcd  scan103.pcd  scan104.pcd  scan105.pcd  scan106.pcd  scan107.pcd  scan108.pcd  scan109.pcd  scan11.pcd  scan110.pcd  scan111.pcd  scan112.pcd  scan113.pcd  scan114.pcd  scan115.pcd  scan116.pcd  scan117.pcd  scan118.pcd  scan119.pcd  scan12.pcd  scan120.pcd  scan121.pcd  scan122.pcd  scan123.pcd  scan124.pcd  scan125.pcd  scan126.pcd  scan127.pcd  scan128.pcd  scan129.pcd  (+8501 more)
python/: README.md  config.json  interpolate_and_write_full_scans.py  multiway_registration.py  quaternions.py
python/blender/: README.md  scanner_quaternion.py  testrom.blend  testrom.blend1
